--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
 PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
 
 [compat]
+Distances = "0.10"
 julia = "1"
 
 [extras]
