--- a/Project.toml
+++ b/Project.toml
@@ -4,16 +4,18 @@ authors = ["Connor Smith"]
 version = "1.0.14-DEV"
 
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CondaPkg = "992eb4ea-22a4-4c89-a5bb-47a3300528ab"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
 PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
+Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [compat]
-Distances = "0.10"
-PythonCall = "0.9"
-NearestNeighbors = "0.4"
 CondaPkg = "0.2"
+Distances = "0.10"
+NearestNeighbors = "0.4"
+PythonCall = "0.9"
 julia = "1"
 
 [extras]
