--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [compat]
+CSV = "0.10"
 CondaPkg = "0.2"
 Distances = "0.10"
 NearestNeighbors = "0.4"
